# esp32_iot_manger_mqtt

./: README.md  sdkconfig
components/iot_manager_mqtt/: CMakeLists.txt  Kconfig  README.md  iot_manager.c  iot_manager.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c  wifi_manager.c  wifi_manager.h
main/app/: README.md  app_config.h  app_manager.c  app_manager.h
